--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "knex": "^2.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
