--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "jest": "^29.0.3",
+    "jwt-decode": "^3.1.2",
     "knex-cleaner": "^1.3.1",
     "supertest": "^6.2.4"
   }
